Added skeleton file structures

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Swamp Gas</title>
-		<!-- <script
+		<script
 			id="sap-ui-bootstrap"
 			src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
 			data-sap-ui-theme="sap_belize_plus"
@@ -14,7 +14,7 @@
 			data-sap-ui-resourceroots='{
 			"emtBuilds.ZEMT_Builds": "./"
 			}'>
-		</script> -->
+		</script>
 
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		
